--- a/src/styles/components/sidebar.css
+++ b/src/styles/components/sidebar.css
@@ -34,6 +34,7 @@
 .sidebar-link:hover {
     background-color: var(--sidebar-item-hover);
     transform: scale(1.05);
+    color: #003ab6;
 }
 
 .sidebar-link.active {
