CRMPP-15 Integrated account approval queue

--- a/src/styles/components/sidebar.css
+++ b/src/styles/components/sidebar.css
@@ -1,5 +1,5 @@
 :root {
-    --sidebar-bg-color: #3B5EAB;
+    --sidebar-bg-color: #08237E;
     --sidebar-item-hover: #7695d8;
     --sidebar-item-active: #006eff8a;
 }
