--- a/src/styles/auth/authStyles.css
+++ b/src/styles/auth/authStyles.css
@@ -7,7 +7,7 @@ label {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #1A4075;
+    background-color: #08237E;
 }
 
 .card-body {
