CRMPP-15 FInished approve/reject account functionality

--- a/src/styles/components/popupModal.css
+++ b/src/styles/components/popupModal.css
@@ -30,7 +30,7 @@
 }
 
 .modal-container {
-    width: 300px;
+    width: auto;
     padding: 20px 30px;
     background-color: #fff;
     border-radius: 20px;
