CRMPP-15 Update profile functionality finished, minus role update pending

--- a/src/styles/auth/profileViewStyles.css
+++ b/src/styles/auth/profileViewStyles.css
@@ -45,3 +45,8 @@
 .user-profile-content .user-profile-picture {
     border-radius: 50%;
 }
+
+.user-profile-content .user-profile-action-btns {
+    display: flex;
+    gap: 20px;
+}
