--- a/src/styles/components/sidebarLayout.css
+++ b/src/styles/components/sidebarLayout.css
@@ -1,9 +1,24 @@
 .page-content {
-    margin-top: 2.5em;
-    padding: 1em;
     transition: 0.3s ease;
 }
 
 .page {
     height: 100vh;
+}
+
+.page .page-title {
+    background-color: #F4F7FB;
+    border: 1px solid #e9ebec;
+    padding: 15px;
+    font-size: 2rem;
+    margin-bottom: 25px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.bg-promipyme {
+    background-color: #EBEBFB;
+    font-weight: 400 !important;
+    color: #08237e !important;
 }
