--- a/src/styles/tableStyling.css
+++ b/src/styles/tableStyling.css
@@ -1,72 +1,106 @@
-thead {
-    --bs-table-bg: #3B5EAB;
-    --bs-table-color: white;
-}
-
-table.rounded-corners {
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-td {
-    vertical-align: middle !important;
-}
-
-.row-action-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-}
-
 .table-responsive {
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-    border-radius: 8px;
+    max-height: 700px;
+    height: auto;
+    border: none;
+    overflow-y: auto;
+    /* position: relative; */
+    border-top: 1px solid #0D6EFD;
+    margin-top: 40px;
+}
+
+.table-responsive th {
+    border: none;
+    padding: 12px !important;
+}
+
+.table-responsive thead {
+    position: sticky;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0) !important;
+    backdrop-filter: blur(10px);
+    z-index: 100;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    height: auto;
+}
+
+.table-responsive thead tr {
+    height: 100%;
+}
+
+.table-responsive thead th {
+    background-color: rgba(255, 255, 255, 0) !important;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    height: 100%;
+    color: rgb(73, 73, 73);
+}
+
+.table-responsive thead th i {
+    margin-right: 10px;
+}
+
+.table-responsive td {
+    border: none;
+    vertical-align: middle;
+}
+
+.table-responsive tbody tr {
+    min-height: 70px;
+    height: 70px;
+}
+
+/* Add a shadow to the very last row of the table only */
+.table-responsive tbody tr:last-child {
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    /* border-top: 1px solid #0D6EFD; */
+}
+
+/* Hover effect for table rows */
+tbody tr {
+    transition: all 0.35s ease-in-out;
 }
 
 .table {
-    width: 100%;
-    max-width: 100%;
-    margin-bottom: 1rem;
     background-color: transparent;
-}
-
-.table-controllers {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: row;
-    margin-bottom: 15px;
-    width: 100%;
-}
-
-.pagination-container {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 10px;
-}
-
-.search-container {
-    width: auto;
-}
-
-tbody tr {
-    transition: all 0.35s ease-in-out;
 }
 
 tbody tr:hover {
     --bs-table-bg: #7695d842 !important;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    z-index: 9000;
+    z-index: 200;
 }
 
-input.form-control {
-    padding: 10px;
-    border-radius: 6px;
-    border: 1px solid #ccc;
+/* Table Scrollbar */
+
+.table-responsive::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+.table-responsive::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+}
+
+.table-responsive::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+}
+
+.table-responsive::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.filter-controllers {
+    margin-top: 40px;
+    margin-left: 30px;
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: row;
+    gap: 18px;
+}
+
+.form-control.text-search {
+    width: 500px;
 }
