CRMPP-33 Integrated contacts CRUD, Created contact detail and update view. Created custom hooks for contact data retrieval

--- a/src/styles/tableStyling.css
+++ b/src/styles/tableStyling.css
@@ -124,3 +124,9 @@ tbody tr:hover {
 .form-control.text-search {
     width: 500px;
 }
+
+.pagination-controls {
+    display: flex;
+    justify-content: space-between;
+    padding: 25px;
+}
