Started integrating workflow module into the frontend | CRMPP-41 Processes List | Tweaked some styles

--- a/src/styles/components/sidebarLayout.css
+++ b/src/styles/components/sidebarLayout.css
@@ -10,6 +10,7 @@
 .page .page-title {
     background-color: #F4F7FB;
     border: 1px solid #e9ebec;
+    font-weight: 700;
     padding: 15px;
     font-size: 2rem;
     margin-bottom: 25px;
