CRMPP-26 Create workflow view and subtle style tweaks/fixes to spinner component and workflow selection menu

--- a/src/styles/components/spinnerStyles.css
+++ b/src/styles/components/spinnerStyles.css
@@ -1,6 +1,12 @@
 .spinner-border {
-    color: #08237e !important;
-    position: absolute;
-    left: 50%;
-    top: 50%;
+    color: rgb(255, 255, 255) !important;
+}
+
+.spinner-border-lg {
+    color: #08237E !important;
+    width: 7.2rem !important;
+    height: 7.2rem !important;
+    position: absolute !important;
+    left: 50% !important;
+    top: 50% !important;
 }
