--- a/src/styles/auth/authStyles.css
+++ b/src/styles/auth/authStyles.css
@@ -116,3 +116,14 @@ input:checked + .slider {
 input:checked + .slider::before {
     transform: translateX(24px);
 }
+
+.invite-user-form-card {
+    max-width: fit-content !important;
+    box-shadow: #0000001a 0px 4px 12px;
+    border: 0.1px solid rgb(204, 204, 204);
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    padding: 25px !important;
+    align-items: flex-start;
+}
