--- a/src/styles/auth/contactDetailStyles.css
+++ b/src/styles/auth/contactDetailStyles.css
@@ -13,3 +13,18 @@
     /* margin-top: -20px;
     margin-bottom: -10px; */
 }
+
+.create-contact-form-card {
+    width: 100%;
+    max-width: 600px !important;
+    box-shadow: #0000001a 0px 4px 12px;
+    border: 0.1px solid rgb(204, 204, 204);
+    display: flex;
+    flex-direction: column;
+    padding: 25px !important;
+    align-items: flex-start;
+}
+
+.create-contact-form-card form {
+    width: 100%;
+}
