--- a/src/styles/auth/authStyles.css
+++ b/src/styles/auth/authStyles.css
@@ -16,13 +16,13 @@ label {
     justify-content: space-around;
     align-items: center;
     box-shadow: 0 20px 60px rgba(0, 0, 0, 0.459);
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 20px;
     width: 90%;
     max-width: 600px;
     margin: auto;
     background-color: white;
-    transition: padding 0.5s ease, margin 0.5s ease;
+    transition: all 0.5s ease;
 }
 
 .column {
