CRMPP-53 Display related cases in contact details view

--- a/src/styles/auth/profileViewStyles.css
+++ b/src/styles/auth/profileViewStyles.css
@@ -87,3 +87,12 @@
     display: flex;
     gap: 20px;
 }
+
+.user-profile-cases {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    overflow-y: scroll;
+    max-height: 500px;
+    margin-top: 20px;
+}
