--- a/src/styles/auth/authStyles.css
+++ b/src/styles/auth/authStyles.css
@@ -127,3 +127,15 @@ input:checked + .slider::before {
     padding: 25px !important;
     align-items: flex-start;
 }
+
+.mass-invite-user-form-card {
+    /* width: fit-content !important; */
+    max-width: 45% !important;
+    box-shadow: #0000001a 0px 4px 12px;
+    border: 0.1px solid rgb(204, 204, 204);
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    padding: 25px !important;
+    align-items: flex-start;
+}
